k8s/services/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: shopno-data
  labels:
    app.kubernetes.io/name: redis
spec:
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
      targetPort: redis
      protocol: TCP
  selector:
    app.kubernetes.io/name: redis
